Added Background Photo

--- a/SimpleBlazor/Components/Layout/MainLayout.razor
+++ b/SimpleBlazor/Components/Layout/MainLayout.razor
@@ -1,6 +1,232 @@
 ﻿@inherits LayoutComponentBase
 
+<div id="PROGRAM" class="modal-wrapper-register">
+    <div class="modal-center">
+        <div data-w-id="7e9c1f15-23b3-3ba7-5e98-16a2e78f875a" class="modal-bg"></div>
+        <div class="modal-prg">
+            <div data-w-id="e1c0e7cb-7ac5-943e-c892-97d3088123d8" class="modal-exit">
+                <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/601b3ea11ec23d1ff4a513d2_exit-white.svg"
+                    loading="lazy" alt="" />
+            </div>
+            <div class="u-flex">
+                <div class="u-margin-bottom is--24">
+                    <h4 class="is--center">Try a Sketchy Program</h4>
+                    <p class="is--center">We &#x27;ll route you to create a free account with us</p>
+                </div>
+                <a href="https://web.archive.org/web/20210504080548/https://med.sketchy.com/register"
+                    class="c-prg-btn is--med w-button">Medical</a>
+                <a href="#" class="c-prg-btn state--disabled w-button">MCAT COMING SOON</a>
+                <a href="#" class="c-prg-btn state--disabled w-button">PHARMACY COMING SOON</a>
+                <a href="#" class="c-prg-btn state--disabled w-button">PA COMING SOON</a>
+                <a href="https://web.archive.org/web/20210504080548/https://dashboard.sketchynursing.com/register"
+                    class="c-prg-btn is--nursing w-button">NURSING</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div id="LOGIN" class="modal-wrapper-login">
+    <div class="modal-center">
+        <div data-w-id="97835662-9b93-30f4-4aad-8d4f3074a2f3" class="modal-bg"></div>
+        <div class="modal-prg">
+            <div data-w-id="a2fd4254-410c-82fc-9fdf-a3245288c72e" class="modal-exit">
+                <img src="https://web.archive.org/web/20210504080548im_/https://assets.website-files.com/5ff7c807d65e6f24ae2a3369/601b3ea11ec23d1ff4a513d2_exit-white.svg"
+                    loading="lazy" alt="" />
+            </div>
+            <div class="u-flex">
+                <div class="u-margin-bottom is--24">
+                    <h4 class="is--center">Login to Sketchy</h4>
+                    <p class="is--center">Choose the program you would like to login to</p>
+                </div>
+                <a href="https://web.archive.org/web/20210504080548/https://med.sketchy.com/sign_in"
+                    class="c-prg-btn is--med w-button">Medical</a>
+                <a href="#" class="c-prg-btn state--disabled w-button">MCAT COMING SOON</a>
+                <a href="#" class="c-prg-btn state--disabled w-button">PHARMACY COMING SOON</a>
+                <a href="#" class="c-prg-btn state--disabled w-button">PA COMING SOON</a>
+                <a href="https://web.archive.org/web/20210504080548/https://dashboard.sketchynursing.com/sign_in"
+                    class="c-prg-btn is--nursing w-button">NURSING</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div data-collapse="medium" data-animation="default" data-duration="400" data-doc-height="1" role="banner"
+    class="global-nav_collapsed w-nav">
+    <div class="w-container">
+        <a href="#" class="brand-2 w-nav-brand">
+            <img src="images/simple-ai-logo.svg" loading="lazy" height="28" alt="" class="image" />
+        </a>
+        <nav role="navigation" class="global-nav_dropdown_item w-nav-menu">
+            <div class="global-nav_section">MY SKETCHY</div>
+            <a href="#" data-w-id="ac7977d0-114d-d66f-eb7c-a8d2e481fd0e"
+                class="global-nav_dropdown_item modal-trigger w-nav-link">Log In</a>
+            <a href="#" data-w-id="ac7977d0-114d-d66f-eb7c-a8d2e481fd10"
+                class="c-primary-btn is--large modal-trigger w-button">TRY FOR FREE</a>
+            <div class="global-nav_section">EXPLORE</div>
+            <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-pre-clinical"
+                class="global-nav_dropdown_item w-nav-link">Medical Pre-Clinical</a>
+            <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-clinical"
+                class="global-nav_dropdown_item w-nav-link">Medical Clinical</a>
+            <a href="/web/20210504080548/https://www.sketchy.com/explore/mcat"
+                class="global-nav_dropdown_item w-nav-link">MCAT</a>
+            <a href="/web/20210504080548/https://www.sketchy.com/explore/pa"
+                class="global-nav_dropdown_item w-nav-link">PA</a>
+            <a href="/web/20210504080548/https://www.sketchy.com/explore/pharmacy"
+                class="global-nav_dropdown_item w-nav-link">Pharmacy</a>
+            <a href="/web/20210504080548/https://www.sketchy.com/explore/nursing" target="_blank"
+                class="global-nav_dropdown_item w-nav-link">Nursing</a>
+            <div class="global-nav_section">SHOP</div>
+            <a href="https://web.archive.org/web/20210504080548/https://sketchymedical.store/collections/sketchymedical-workbooks"
+                target="_blank" class="global-nav_dropdown_item w-nav-link">Workbooks</a>
+            <a href="https://web.archive.org/web/20210504080548/https://sketchymedical.store/collections/shirts"
+                target="_blank" class="global-nav_dropdown_item w-nav-link">Apparel</a>
+        </nav>
+        <div class="menu-button w-clearfix w-nav-button">
+            <div class="global-nav_hamburger w-icon-nav-menu"></div>
+        </div>
+    </div>
+</div>
+<div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="global-nav w-nav">
+    <div class="global-nav-bar">
+        <div class="w-clearfix">
+            <a href="https://www.simplerule.co/" aria-current="page" class="brand-2 w-nav-brand w--current">
+                <img src="images/simple-ai-logo.svg" loading="lazy" height="28" alt="" class="image" />
+            </a>
+            <nav role="navigation" class="global-nav-left w-nav-menu">
+                <div data-hover="1" data-delay="0" class="dropdown w-dropdown">
+                    <div class="global-nav__dropdown w-dropdown-toggle">
+                        <div class="w-icon-dropdown-toggle"></div>
+                        <div class="nav-dropdown__text">EXPLORE</div>
+                    </div>
+                    <nav class="dropdown-list w-dropdown-list">
+                        <div class="u-flex is--hor align--top justify--left">
+                            <div>
+                                <div class="global-nav_section">WIRELESS PLANS</div>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-pre-clinical"
+                                    class="global-nav_dropdown_item w-dropdown-link">Medical Pre-Clinical</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-clinical"
+                                    class="global-nav_dropdown_item w-dropdown-link">Medical Clinical</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/mcat"
+                                    class="global-nav_dropdown_item w-dropdown-link">MCAT</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/pa"
+                                    class="global-nav_dropdown_item w-dropdown-link">PA</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/pharmacy"
+                                    class="global-nav_dropdown_item w-dropdown-link">Pharmacy</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/nursing"
+                                    class="global-nav_dropdown_item w-dropdown-link">Nursing</a>
+                            </div>
+                            <div>
+                                <div class="global-nav_section">CONCIERGE</div>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-pre-clinical"
+                                    class="global-nav_dropdown_item w-dropdown-link">USMLE® Step 1</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-clinical"
+                                    class="global-nav_dropdown_item w-dropdown-link">USMLE® Step 2</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/mcat"
+                                    class="global-nav_dropdown_item w-dropdown-link">MCAT®</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/pa"
+                                    class="global-nav_dropdown_item w-dropdown-link">PANCE®</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/pharmacy"
+                                    class="global-nav_dropdown_item w-dropdown-link">PCAT®, NAPLEX®</a>
+                                <a href="/web/20210504080548/https://www.sketchy.com/explore/nursing"
+                                    class="global-nav_dropdown_item w-dropdown-link">NCLEX®</a>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+                <div data-hover="1" data-delay="0" class="w-dropdown">
+                    <div class="global-nav__dropdown w-dropdown-toggle">
+                        <div class="w-icon-dropdown-toggle"></div>
+                        <div class="nav-dropdown__text">PHONES</div>
+                    </div>
+                    <nav class="dropdown-list w-dropdown-list">
+                        <div class="global-nav_section">SHOP</div>
+                        <a href="https://web.archive.org/web/20210504080548/https://sketchymedical.store/collections/sketchymedical-workbooks"
+                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Workbooks</a>
+                        <a href="https://web.archive.org/web/20210504080548/https://sketchymedical.store/collections/shirts"
+                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Apparel</a>
+                    </nav>
+                </div>
+            </nav>
+            <nav role="navigation" class="global-nav-right w-nav-menu">
+                <a data-w-id="b24e9a27-7e5a-9df8-012f-b9b8ff49d6e6" href="#"
+                    class="global-nav-link modal-trigger w-inline-block">
+                    <div>LOG IN</div>
+                </a>
+                <a href="#" data-w-id="b24e9a27-7e5a-9df8-012f-b9b8ff49d6e9"
+                    class="global-nav-btn modal-trigger w-button">TRY FOR FREE</a>
+            </nav>
+        </div>
+    </div>
+</div>
 @Body
+
+<div class="global-footer-bg">
+    <div class="u-padding-y is--56 w-container">
+        <div class="w-layout-grid c-footer_grid">
+            <div>
+                <h6>
+                    <span class="u-text-color is--black">Programs</span>
+                </h6>
+                <a href="/link-not-found/Simple_Rule_AI" class="global-footer-link">Simple Rule AI</a>
+                <a href="/link-not-found/Simple_WhatsApp" class="global-footer-link">WhatsApp</a>
+                <a href="/link-not-found/Simple_Google_Maps" class="global-footer-link">Maps</a>
+                <a href="/link-not-found/Simple_Business" class="global-footer-link">Business Tools</a>
+                <a href="/link-not-found/Simple_Timer" class="global-footer-link">Weather</a>
+                <a href="/link-not-found/Simple_Photo_Emailer" class="global-footer-link">Photo Email</a>
+            </div>
+            <div>
+                <h6>
+                    <span class="u-text-color is--black">Support</span>
+                </h6>
+                <a href="/link-not-found/Account" class="global-footer-link">Account</a>
+                <a href="/link-not-found/Billing" class="global-footer-link">Billing</a>
+                <a href="https://forms.gle/KuewJ2PxgjD8jKgB9" target="_blank" rel="noopener noreferrer"
+                    class="global-footer-link">Manage Subscription</a>
+                <a href="/link-not-found/Institutions" class="global-footer-link">Institutions</a>
+                <a href="/link-not-found/Contact Us" class="global-footer-link">Contact Us</a>
+            </div>
+            <div id="w-node-_4099f47b-6fda-bd45-89a8-b604e38abb33-e38abb1a">
+                <h6>
+                    <span class="u-text-color is--black">About Us</span>
+                </h6>
+                <a href="/link-not-found/Company" class="global-footer-link">Company</a>
+                <a href="/link-not-found/Careers" target="_blank" class="global-footer-link">Careers</a>
+                <a href="/link-not-found/Equity" class="global-footer-link">Freedom &amp; Focus</a>
+            </div>
+        </div>
+        <div class="divider"></div>
+        <div class="w-clearfix">
+            <div class="u-float is--left">
+                <div class="u-flex is--hor">
+                    <a href="/link-not-found/Facebook" target="_blank" class="global-footer-social w-inline-block">
+                        <img src="images/facebook-f-brands-black.svg" loading="lazy" alt="Facebook" />
+                    </a>
+                    <a href="https://x.com/simplerule_ai" target="_blank" class="global-footer-social w-inline-block">
+                        <img src="images/twitter-brands-black.svg" loading="lazy" alt="Twitter/X" />
+                    </a>
+                    <a href="https://www.instagram.com/simplerule.ai?igsh=MThuMnZpNWJmNzlzNg%3D%3D&utm_source=qr"
+                        target="_blank" class="global-footer-social w-inline-block">
+                        <img src="images/instagram-brands-black.svg" loading="lazy" alt="Instagram" />
+                    </a>
+                    <a href="/link-not-found/YouTube" target="_blank" class="global-footer-social w-inline-block">
+                        <img src="images/youtube-brands-black.svg" loading="lazy" alt="YouTube" />
+                    </a>
+                    <a href="/link-not-found/Linkedin" target="_blank" class="global-footer-social w-inline-block">
+                        <img src="images/linkedin-in-brands-black.svg" loading="lazy" alt="LinkedIn" />
+                    </a>
+                </div>
+            </div>
+            <div class="u-float is--right">
+                <div class="u-flex is--hor">
+                    <a href="/link-not-found/Privacy_Policy" class="c-footer-link-page">Privacy
+                        Policy</a>
+                    <a href="/link-not-found/Terms_Of_Use" class="c-footer-link-page">Terms of
+                        Use</a>
+                    <a href="/link-not-found/Cookie_Policy" class="c-footer-link-page">Cookie Policy</a>
+                    <a href="#" class="c-footer-link-page">© 2024-2025 Simple Rule LLC. All rights reserved</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div id="blazor-error-ui">
     An unhandled error has occurred.
