--- a/SimpleBlazor/Components/Pages/LinkNotFound.razor
+++ b/SimpleBlazor/Components/Pages/LinkNotFound.razor
@@ -9,7 +9,9 @@
         // Additional logic if needed
     }
 }
-
-<h3>You clicked on '@linkName', but it isn't created yet.</h3>
-<p>Please email <a href="mailto:simplerule.ai@gmail.com">brennanopitz@gmail.com</a> to request this link or page.</p>
-<p> Thanks for being patient with us! </p>
+<div class="u-background-light-blue">
+    <h3> <br> <br> You clicked on '@linkName', but it isn't created yet. <br> <br> </h3>
+    <p>Please email <a href="mailto:simplerule.ai@gmail.com">brennanopitz@gmail.com</a> to request this link or page.
+    </p>
+    <p> Thanks for being patient with us!  <br> <br> <br> <br> </p>
+</div>
