Going to bed, Added headder in CSS

--- a/SimpleBlazor/wwwroot/app.css
+++ b/SimpleBlazor/wwwroot/app.css
@@ -2469,7 +2469,7 @@ li {
 .home-hero-desktop {
     max-height: 625px;
     padding-top: 50px;
-    background-image: url('/images/Simple_Header_to_Copy.png');
+    background-image: url('/images/Simple_Header_to_Copy.jpg');
     background-position: 0 0;
     background-size: cover;
     text-align: left;
