Fixed wierd spacing

--- a/SimpleBlazor/Components/Pages/Home.razor
+++ b/SimpleBlazor/Components/Pages/Home.razor
@@ -148,6 +148,8 @@
                                                             <!-- Enter Phone Number Here -->
                                                         <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-clinical" class="c-primary-btn is--large is--med w-button">LEARN MORE + PRICING</a>
                                                     </div>
+                                                    </div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
