Better Buttons and Dividing out Page

--- a/SimpleBlazor/Components/Layout/MainLayout.razor
+++ b/SimpleBlazor/Components/Layout/MainLayout.razor
@@ -13,12 +13,12 @@
                     <h4 class="is--center">Try a Sketchy Program</h4>
                     <p class="is--center">We &#x27;ll route you to create a free account with us</p>
                 </div>
-                <a href="https://web.archive.org/web/20210504080548/https://med.sketchy.com/register"
+                <a href="/link-not-found/register"
                     class="c-prg-btn is--med w-button">Medical</a>
                 <a href="#" class="c-prg-btn state--disabled w-button">MCAT COMING SOON</a>
                 <a href="#" class="c-prg-btn state--disabled w-button">PHARMACY COMING SOON</a>
                 <a href="#" class="c-prg-btn state--disabled w-button">PA COMING SOON</a>
-                <a href="https://web.archive.org/web/20210504080548/https://dashboard.sketchynursing.com/register"
+                <a href="/link-not-found/register"
                     class="c-prg-btn is--nursing w-button">NURSING</a>
             </div>
         </div>
@@ -37,12 +37,12 @@
                     <h4 class="is--center">Login to Sketchy</h4>
                     <p class="is--center">Choose the program you would like to login to</p>
                 </div>
-                <a href="https://web.archive.org/web/20210504080548/https://med.sketchy.com/sign_in"
+                <a href="/link-not-found/sign_in"
                     class="c-prg-btn is--med w-button">Medical</a>
                 <a href="#" class="c-prg-btn state--disabled w-button">MCAT COMING SOON</a>
                 <a href="#" class="c-prg-btn state--disabled w-button">PHARMACY COMING SOON</a>
                 <a href="#" class="c-prg-btn state--disabled w-button">PA COMING SOON</a>
-                <a href="https://web.archive.org/web/20210504080548/https://dashboard.sketchynursing.com/sign_in"
+                <a href="/link-not-found/sign_in"
                     class="c-prg-btn is--nursing w-button">NURSING</a>
             </div>
         </div>
@@ -61,22 +61,22 @@
             <a href="#" data-w-id="ac7977d0-114d-d66f-eb7c-a8d2e481fd10"
                 class="c-primary-btn is--large modal-trigger w-button">TRY FOR FREE</a>
             <div class="global-nav_section">EXPLORE</div>
-            <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-pre-clinical"
+            <a href="/link-not-found/explore/medical-pre-clinical"
                 class="global-nav_dropdown_item w-nav-link">Medical Pre-Clinical</a>
-            <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-clinical"
+            <a href="/link-not-found/explore/medical-clinical"
                 class="global-nav_dropdown_item w-nav-link">Medical Clinical</a>
-            <a href="/web/20210504080548/https://www.sketchy.com/explore/mcat"
+            <a href="/link-not-found/explore/mcat"
                 class="global-nav_dropdown_item w-nav-link">MCAT</a>
-            <a href="/web/20210504080548/https://www.sketchy.com/explore/pa"
+            <a href="/link-not-found/explore/pa"
                 class="global-nav_dropdown_item w-nav-link">PA</a>
-            <a href="/web/20210504080548/https://www.sketchy.com/explore/pharmacy"
+            <a href="/link-not-found/pharmacy"
                 class="global-nav_dropdown_item w-nav-link">Pharmacy</a>
-            <a href="/web/20210504080548/https://www.sketchy.com/explore/nursing" target="_blank"
+            <a href="/link-not-found/explore/nursing" target="_blank"
                 class="global-nav_dropdown_item w-nav-link">Nursing</a>
             <div class="global-nav_section">SHOP</div>
-            <a href="https://web.archive.org/web/20210504080548/https://sketchymedical.store/collections/sketchymedical-workbooks"
+            <a href="/link-not-found/simple_rule_workbooks"
                 target="_blank" class="global-nav_dropdown_item w-nav-link">Workbooks</a>
-            <a href="https://web.archive.org/web/20210504080548/https://sketchymedical.store/collections/shirts"
+            <a href="/link-not-found/simple_rule_shirts"
                 target="_blank" class="global-nav_dropdown_item w-nav-link">Apparel</a>
         </nav>
         <div class="menu-button w-clearfix w-nav-button">
@@ -100,33 +100,33 @@
                         <div class="u-flex is--hor align--top justify--left">
                             <div>
                                 <div class="global-nav_section">WIRELESS PLANS</div>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-pre-clinical"
-                                    class="global-nav_dropdown_item w-dropdown-link">Medical Pre-Clinical</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-clinical"
-                                    class="global-nav_dropdown_item w-dropdown-link">Medical Clinical</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/mcat"
-                                    class="global-nav_dropdown_item w-dropdown-link">MCAT</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/pa"
-                                    class="global-nav_dropdown_item w-dropdown-link">PA</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/pharmacy"
-                                    class="global-nav_dropdown_item w-dropdown-link">Pharmacy</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/nursing"
-                                    class="global-nav_dropdown_item w-dropdown-link">Nursing</a>
+                                <a href="/link-not-found/one_dollar_sim_card"
+                                    class="global-nav_dropdown_item w-dropdown-link">$1 Simple Sim Card</a>
+                                <a href="/link-not-found/five_dollars_month"
+                                    class="global-nav_dropdown_item w-dropdown-link">$5 / Month &nbsp;</a>
+                                <a href="/link-not-found/ten_dollars_month"
+                                    class="global-nav_dropdown_item w-dropdown-link">$10 / Month</a>
+                                <a href="/link-not-found/fifteen_dollars_month"
+                                    class="global-nav_dropdown_item w-dropdown-link">$15 / Month</a>
+                                <a href="/link-not-found/thirty_dollars_month"
+                                    class="global-nav_dropdown_item w-dropdown-link">$30 / Month</a>
+                                 <a href="/link-not-found/build_your_own_plan"
+                                    class="global-nav_dropdown_item w-dropdown-link">Build Your Own!</a>    
                             </div>
                             <div>
                                 <div class="global-nav_section">CONCIERGE</div>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-pre-clinical"
-                                    class="global-nav_dropdown_item w-dropdown-link">USMLE® Step 1</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/medical-clinical"
-                                    class="global-nav_dropdown_item w-dropdown-link">USMLE® Step 2</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/mcat"
-                                    class="global-nav_dropdown_item w-dropdown-link">MCAT®</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/pa"
-                                    class="global-nav_dropdown_item w-dropdown-link">PANCE®</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/pharmacy"
-                                    class="global-nav_dropdown_item w-dropdown-link">PCAT®, NAPLEX®</a>
-                                <a href="/web/20210504080548/https://www.sketchy.com/explore/nursing"
-                                    class="global-nav_dropdown_item w-dropdown-link">NCLEX®</a>
+                                <a href="/link-not-found/just_text_basic"
+                                    class="global-nav_dropdown_item w-dropdown-link">Just Text</a>
+                                <a href="/link-not-found/text_and_images_vip"
+                                    class="global-nav_dropdown_item w-dropdown-link">Send An Image</a>
+                                <a href="/link-not-found/WhatsApp"
+                                    class="global-nav_dropdown_item w-dropdown-link">WhatsApp</a>
+                                <a href="/link-not-found/photo_email"
+                                    class="global-nav_dropdown_item w-dropdown-link">Photo Email</a>
+                                <a href="/link-not-found/business_tools"
+                                    class="global-nav_dropdown_item w-dropdown-link">Business Tools</a>
+                                <a href="/link-not-found/auto_concierge_plus"
+                                    class="global-nav_dropdown_item w-dropdown-link">Auto-Concierge Plus</a>
                             </div>
                         </div>
                     </nav>
@@ -138,10 +138,12 @@
                     </div>
                     <nav class="dropdown-list w-dropdown-list">
                         <div class="global-nav_section">SHOP</div>
-                        <a href="https://web.archive.org/web/20210504080548/https://sketchymedical.store/collections/sketchymedical-workbooks"
-                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Workbooks</a>
-                        <a href="https://web.archive.org/web/20210504080548/https://sketchymedical.store/collections/shirts"
-                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Apparel</a>
+                        <a href="/link-not-found/buy_light_phone_II"
+                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Light Phone II</a>
+                        <a href="/link-not-found/buy_light_phone_III"
+                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Light Phone III</a>
+                        <a href="/link-not-found/buy_Simple_Rule_apparel"
+                            target="_blank" class="global-nav_dropdown_item w-dropdown-link">Simple Rule Apparel</a>
                     </nav>
                 </div>
             </nav>
