Added Web Archive to error message

--- a/SimpleBlazor/Components/Layout/MainLayout.razor
+++ b/SimpleBlazor/Components/Layout/MainLayout.razor
@@ -233,5 +233,10 @@
 <div id="blazor-error-ui">
     An unhandled error has occurred.
     <a href="" class="reload">Reload</a>
+    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; This site replicates the layout and CSS of an archived site from the <a
+        href="https://web.archive.org/web/20210504080548/https://www.sketchy.com/"
+        target="_blank">Web
+        Archive</a>  as a personal coding practice project.
     <a class="dismiss">🗙</a>
 </div>
+
