--- a/SimpleBlazor/Components/GlobalFooter.razor
+++ b/SimpleBlazor/Components/GlobalFooter.razor
@@ -20,7 +20,7 @@
                 <a href="/link-not-found/Billing" class="global-footer-link">Billing</a>
                 <a href="https://forms.gle/KuewJ2PxgjD8jKgB9" target="_blank" rel="noopener noreferrer"
                     class="global-footer-link">Manage Subscription</a>
-                <a href="/link-not-found/Institutions" class="global-footer-link">Institutions</a>
+                <a href="/link-not-found/Businesses" class="global-footer-link">Businessesgit</a>
                 <a href="/link-not-found/Contact Us" class="global-footer-link">Contact Us</a>
             </div>
             <div id="w-node-_4099f47b-6fda-bd45-89a8-b604e38abb33-e38abb1a">
